--- a/docker-compose-cloudreve.yml
+++ b/docker-compose-cloudreve.yml
@@ -5,13 +5,13 @@ services:
     image: cloudreve/cloudreve
     restart: unless-stopped
     ports:
-      - 65212:5212
+      - 6212:5212
     volumes:
       - /opt/docker/cloudreve/uploads:/cloudreve/uploads
       - /opt/docker/cloudreve/conf.ini:/cloudreve/conf.ini
       - /opt/docker/cloudreve/cloudreve.db:/cloudreve/cloudreve.db
       - /opt/docker/cloudreve/avatar:/cloudreve/avatar
     environment:
-      - PUID=0
-      - PGID=0
+      - PUID=$$UID
+      - PGID=$$UID
       - UMASK=022
