--- a/docker-compose-xray.yml
+++ b/docker-compose-xray.yml
@@ -1,23 +1,13 @@
 # xray 
 version: '3.8'
 services:
-  v2fly:
-    image: v2fly/v2fly-core:latest
-    container_name: v2fly
-    restart: unless-stopped
-    ports:
-      - 443:443
-      - 80:80
-    volumes:
-      - /opt/docker/v2fly/config.json:/etc/v2fly/config.json
-    command: v2fly -config=/etc/v2fly/config.json
-
   xray:
     image: teddysun/xray:latest
     container_name: xray
     restart: unless-stopped
+    network_mode: host
     ports:
-      - 10000:10000
+      - 6443:6443
     volumes:
       - /opt/docker/xray/config.json:/etc/xray/config.json
     command: xray -config=/etc/xray/config.json
