--- a/docker-compose-jupyter.yml
+++ b/docker-compose-jupyter.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     environment:
       - JUPYTER_ENABLE_LAB=yes
-      - JUPYTER_TOKEN=''
+      - JUPYTER_TOKEN=
       - JUPYTER_PASSWORD=P@ssw0rd
     ports:
       - 6088:8888
